samples/_failures_safe/1761128766_097d3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbfa80c1.c: In function ‘main’:
./samples/SAFE/__tmp_cbfa80c1.c:170:31: error: expected ‘)’ at end of input
  170 |     size_t len = strlen(buffer
      |                        ~      ^
      |                               )
./samples/SAFE/__tmp_cbfa80c1.c:170:5: error: expected declaration or statement at end of input
  170 |     size_t len = strlen(buffer
      |     ^~~~~~
